--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+    @apply bg-gradient-to-r from-blue-800 to-indigo-900 w-full min-h-min;
+}
